--- a/newtab.html
+++ b/newtab.html
@@ -1,1 +1,23 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="styles.css">
+    <script src="newTab.js"></script>
+
+    <title>New Tab</title>
+</head>
+<body>
+
+    <div class="content">
+        <span id="day"></span> 
+        <span id="date"></span>
+        <br>
+        <h1><span id="time"></span></h1>
+    </div>
+
+</body>
+</html>
