--- a/popup.html
+++ b/popup.html
@@ -14,11 +14,11 @@
         <label for="time">Class Time:</label><br>
         <input type="text" id="time" name="time" value=""><br><br>
 
-        <input type="submit" value="Add">
+        <button type="submit" value="Add" onClick="postData()">
     </form>
 
     <p>Click the "Add" button to add this zoom link to your list.</p>
 
 </body>
-
+<script src="popup.js"></script>
 </html>
