--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 
     <h1>ZOOM LINKS</h1>
 
-    <form action="/action_page.php">
+    <form action="#">
         <label for="class">Class:</label><br>
         <input type="text" id="class" name="class" value=""><br><br>
 
@@ -14,7 +14,7 @@
         <label for="time">Class Time:</label><br>
         <input type="text" id="time" name="time" value=""><br><br>
 
-        <button type="submit" value="Add" onClick="postData()">
+        <input type="submit" value="Add" id="submit">
     </form>
 
     <p>Click the "Add" button to add this zoom link to your list.</p>
