--- a/newtab.html
+++ b/newtab.html
@@ -5,29 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;900&family=Ubuntu&display=swap" rel="stylesheet">
-
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="newTab.js"></script>
-    
+
     <title>New Tab</title>
 </head>
-<body id="background-img">
-    
-    <div id="content">
-        <span id="day"></span> 
-        <span id="date"></span>
-        <br>
-        <h1><span id="time"></span></h1>
-        <h2>What is your name?</h2>
-        <input type="text" name="name" id="name">
-        <input type="button" id="enterName" value="Enter">
-
-    </div>
-
+<body>
+    <h1>The time is: <span id="time"></span></h1>
 </body>
 </html>
