--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,17 @@
         <label for="time">Class Time:</label><br>
         <input type="time" id="time" name="time" value=""><br><br>
 
+        <label for="monday">M</label>
+        <input type="checkbox" id="monday" name="monday" value="">
+        <label for="tuesday">T</label>
+        <input type="checkbox" id="tuesday" name="tuesday" value="">
+        <label for="wednesday">W</label>
+        <input type="checkbox" id="wednesday" name="wednesday" value=""><br>
+        <label for="thursday">Th</label>
+        <input type="checkbox" id="thursday" name="thursday" value="">
+        <label for="friday">F</label>
+        <input type="checkbox" id="friday" name="friday" value=""><br><br>
+
         <input type="submit" id="submit" value="Add">
     </form>
     <p>Click the "Add" button to add this zoom link to your list.</p>
