Landing Page update

--- a/newtab.html
+++ b/newtab.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-size: 100% 200% !important; background-repeat: no-repeat;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,8 +16,9 @@
     
     <title>New Tab</title>
 </head>
-<body id="background-img">
-    
+<body>
+    <img id="logo" src="images/FuzeLogo.png" alt="Fuze-Logo">
+
     <div id="content">
         <span id="day"></span> 
         <span id="date"></span>
