--- a/popup.html
+++ b/popup.html
@@ -15,15 +15,15 @@
         <input type="time" id="time" name="time" value=""><br><br>
 
         <label for="monday">M</label>
-        <input type="checkbox" id="monday" name="monday" value="">
+        <input type="checkbox" id="monday" name="monday" value="M">
         <label for="tuesday">T</label>
-        <input type="checkbox" id="tuesday" name="tuesday" value="">
+        <input type="checkbox" id="tuesday" name="tuesday" value="T">
         <label for="wednesday">W</label>
-        <input type="checkbox" id="wednesday" name="wednesday" value=""><br>
+        <input type="checkbox" id="wednesday" name="wednesday" value="W"><br>
         <label for="thursday">Th</label>
-        <input type="checkbox" id="thursday" name="thursday" value="">
+        <input type="checkbox" id="thursday" name="thursday" value="Th">
         <label for="friday">F</label>
-        <input type="checkbox" id="friday" name="friday" value=""><br><br>
+        <input type="checkbox" id="friday" name="friday" value="F"><br><br>
 
         <input type="submit" id="submit" value="Add">
     </form>
