--- a/newtab.html
+++ b/newtab.html
@@ -19,9 +19,7 @@
     <img id="logo" src="images/darkblue.png" alt="Fuze-Logo">
 
     <div id="content">
-        <span id="day"></span> 
-        <span id="date"></span>
-        <br>
+        <p><span id="day"></span> | <span id="date"></span></p>
         <h1><span id="time"></span></h1>
         <h2>What is your name?</h2>
         <input type="text" name="name" id="name" autofocus placeholder="Your Name">
