--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,12 @@
     form {
       text-align: center;
     }
+    h1 {
+      text-align: center;
+    }
+    p {
+      text-align: center;
+    }
   </style>
 </head>
 
