--- a/landing-page/newtab.html
+++ b/landing-page/newtab.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-size: 100% 200% !important; background-repeat: no-repeat;">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;900&family=Ubuntu&display=swap" rel="stylesheet">
-
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="styles.css">
     
