--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,17 @@
   <style>
     form {
       text-align: center;
+      font-family:georgia;
+      font-size: 15px;
     }
     h1 {
       text-align: center;
+      font-family:georgia;
     }
     p {
       text-align: center;
+      font-family:georgia;
+      font-size: 15px;
     }
   </style>
 </head>
