--- a/popup.html
+++ b/popup.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
 
 <head>
-  <style>
-    form {
-      text-align: center;
-      font-family:georgia;
-      font-size: 15px;
-    }
-    h1 {
-      text-align: center;
-      font-family:georgia;
-    }
-    p {
-      text-align: center;
-      font-family:georgia;
-      font-size: 15px;
-    }
-  </style>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
