--- a/landing-page/newtab.html
+++ b/landing-page/newtab.html
@@ -44,7 +44,11 @@
           <div class="carousel-item active">
             <table>
                 <tr>
-                    <td></td>
+                    <td>
+                       <table id="classes_monday">
+
+                       </table>
+                    </td>
                 </tr>
             </table>
           </div>
