--- a/popup.html
+++ b/popup.html
@@ -38,7 +38,14 @@
     <input type="submit" id="submit" value="Add">
   </form>
   <p>Click the "Add" button to add this zoom link to your list.</p>
-
+  <br>
+  <p>
+    Current classes:
+    <br>
+    <div class="classes_monday">
+                           
+    </div>
+  </p>
 
 </body>
 <script src="popup.js"></script>
