dom element changer

--- a/popup.html
+++ b/popup.html
@@ -42,7 +42,7 @@
   <p>
     Current classes:
     <br>
-    <div class="classes_monday">
+    <div class="classes_monday" style="width:100%">
                            
     </div>
   </p>
