more additions to the storage functionality

--- a/landing-page/newtab.html
+++ b/landing-page/newtab.html
@@ -45,7 +45,7 @@
             <table>
                 <tr>
                     <td>
-                       <table id="classes_monday">
+                       <table id="class_monday">
 
                        </table>
                     </td>
