--- a/popup.html
+++ b/popup.html
@@ -37,12 +37,12 @@
 
     <input type="submit" id="submit" value="Add">
   </form>
-  <p>Click the "Add" button to add this zoom link to your list.</p>
+  <p>Click the "Add" buttons to add this zoom link to your list.</p>
   <br>
   <p>
     Current classes:
     <br>
-    <div class="classes_monday" style="width:100%">
+    <div id="class_monday" style="width:100%">
                            
     </div>
   </p>
