--- a/popup.html
+++ b/popup.html
@@ -2,55 +2,60 @@
 
 <head>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;900&family=Ubuntu&display=swap" rel="stylesheet">
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
+
+  
 </head>
 
 <body>
 
-  <h1>ZOOM LINKS</h1>
+  <h1 class="words">ZOOM LINKS</h1>
 
 
   <form>
-    <label for="class">Class:</label><br>
-    <input type="text" id="class" name="class" value=""><br><br>
+    <label class="words" for="class">Class:</label><br>
+    <input class="text words" type="text" id="class" name="class" value=""><br><br>
 
-    <label for="link">Zoom Link:</label><br>
-    <input type="text" id="link" name="link" value=""><br><br>
+    <label class="words" for="link">Zoom Link:</label><br>
+    <input class="text words" type="url" id="link" name="link" value="" placeholder="www.zoom.ca"><br><br>
 
-    <label for="time">Class Time:</label><br>
-    <input type="time" id="time" name="time" value=""><br><br>
+    <label class="words" for="time">Class Time:</label><br>
+    <input class="words" type="time" id="time" name="time" value=""><br><br>
 
-    <label for="monday">M</label>
-    <input type="checkbox" id="monday" name="monday" value="M">
-    <label for="tuesday">T</label>
-    <input type="checkbox" id="tuesday" name="tuesday" value="T">
-    <label for="wednesday">W</label>
-    <input type="checkbox" id="wednesday" name="wednesday" value="W"><br>
-    <label for="thursday">Th</label>
-    <input type="checkbox" id="thursday" name="thursday" value="Th">
-    <label for="friday">F</label>
-    <input type="checkbox" id="friday" name="friday" value="F"><br><br>
+    <label class="words" for="monday">M</label>
+    <input class="day words" type="checkbox" id="monday" name="monday" value="M">
+    <label class="words" for="tuesday">T</label>
+    <input class="day words" type="checkbox" id="tuesday" name="tuesday" value="T">
+    <label class="words" for="wednesday">W</label>
+    <input class="day words" type="checkbox" id="wednesday" name="wednesday" value="W">
+    <label class="words" for="thursday">Th</label>
+    <input class="day words" type="checkbox" id="thursday" name="thursday" value="Th">
+    <label class="words" for="friday">F</label>
+    <input class="day words" type="checkbox" id="friday" name="friday" value="F">
+    
+    <br><br>
 
-    <input type="submit" id="submit" value="Add">
+    <input class="words" type="submit" id="submit" value="Add">
   </form>
-  <p>Click the "Add" buttons to add this zoom link to your list.</p>
   <br>
-  <p>
+  <p class="words">Click the "Add" button to add this zoom link to your schedule!</p>
+  <p class="words">
     Current classes:
     <br>
-    <table style="width:100%; color: white;">
+    <table class="table-dark table" style="width:100%; color: white;">
       <tr>
         <th>Link</th>
         <th>Time</th>
         <th>Monday</th>
         <th>Tuesday</th>
         <th>Wednesday</th>
-        <th>Thursdays</th>
-        <th>Fridays</th>
+        <th>Thursday</th>
+        <th>Friday</th>
         <th>Class</th>
       </tr>
       <table id="class_monday">  </table>
@@ -70,6 +75,8 @@ tbody tr:nth-of-type(even) {
 tbody tr:last-of-type {
     border-bottom: 2px solid #009879;
 }
+
+
   </style>
 
 </body>
