--- a/landing-page/newtab.html
+++ b/landing-page/newtab.html
@@ -30,7 +30,8 @@
 
     <!-- Carousel -->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
+       
+       <!-- <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -40,18 +41,28 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 7"></button>
 
         </div>
+    -->
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <table>
-                <tr>
-                    <td>
-                       <table id="class_monday">
-
-                       </table>
-                    </td>
-                </tr>
-            </table>
+          <div class="carousel-item active" style="background-color: rgb(41, 37, 37);border-radius: 8px;">
+                        <table class="table" style="width:100%; color: white;padding-bottom: 0px;">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">Class</th>
+                                    <th scope="col">Link</th>
+                                    <th scope="col">Time</th>
+                                    <th scope="col">Monday</th>
+                                    <th scope="col">Tuesday</th>
+                                    <th scope="col">Wednesday</th>
+                                    <th scope="col">Thursday</th>
+                                    <th scope="col">Friday</th>
+                                    <table id="class_monday" class="table" style="width:100%; color: white;">  </table>
+                                  </tr>
+                            </thead>
+                            
+                          </table>
+                        </p>          
           </div>
+          <!--
           <div class="carousel-item">
             <table>
                 <tr>
@@ -103,6 +114,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+    -->
       </div>
 
     <script src="newTab.js"></script>
