--- a/landing-page/newtab.html
+++ b/landing-page/newtab.html
@@ -47,14 +47,8 @@
                         <table class="table" style="width:100%; color: white;padding-bottom: 0px;">
                             <thead class="thead-dark">
                                 <tr>
-                                    <th scope="col">Class</th>
-                                    <th scope="col">Link</th>
-                                    <th scope="col">Time</th>
-                                    <th scope="col">Monday</th>
-                                    <th scope="col">Tuesday</th>
-                                    <th scope="col">Wednesday</th>
-                                    <th scope="col">Thursday</th>
-                                    <th scope="col">Friday</th>
+                                    <th scope="col">Upcoming Classes</th>
+                                  
                                     <table id="class_monday" class="table" style="width:100%; color: white;">  </table>
                                   </tr>
                             </thead>
